Fixed off center social footer

--- a/css/master.css
+++ b/css/master.css
@@ -4,6 +4,7 @@ html {
 
 ul {
   list-style-type: none;
+  padding: 0;
 }
 
 li {
